<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/wallpar234">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:textSize="50sp"
        android:fontFamily="@font/orange_juice"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topic_by"
        android:textSize="20sp"
        android:fontFamily="@font/orange_juice"
        android:gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:layout_marginStart="220dp"
        android:textColor="@color/black"
        />
  <!--  <ImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ram_fanko2"
        android:layout_gravity="center"/>-->

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:src="@drawable/final_tenor"
        android:layout_gravity="center"/>



    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/begin_btn"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="100dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/shape_selector"
        android:id="@+id/begin_btn"
        android:fontFamily="@font/whale"

        />



</FrameLayout>